clusters/home-workers/ingress-nginx/podinfo-hephy-pro/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: podinfo-hephy-pro
  namespace: ingress-nginx
spec:
  ports:
    - name: moo-ingress
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: podinfo-hephy-pro
  namespace: ingress-nginx
subsets:
- addresses:
  - ip: 10.17.12.204
  ports:
  - port: 80
    name: moo-ingress-http
  - port: 443
    name: moo-ingress
